# GIF

./: .gitignore  CMakeLists.txt  README.md
include/: WIN32ConsoleBuffer.h  WIN32ConsoleInstance.h  WIN32ConsoleProperties.h
libraries/: console.x64.win32.exp  console.x64.win32.lib  console.x86.win32.exp  console.x86.win32.lib
projects/GIF/: GIF.cpp  GIF.h  GIF89a.cpp  GIF89a.h
projects/GIF/89a/: consts.h  structs.h  typedefs.h
projects/GIF89a/: GIF89a.c  GIF89a.h
projects/GIF89a/core/: GIF89a.ApplicationExtension.c  GIF89a.ApplicationExtension.h  GIF89a.Block.c  GIF89a.Block.h  GIF89a.CommentExtension.c  GIF89a.CommentExtension.h  GIF89a.GraphicsControlExtension.c  GIF89a.GraphicsControlExtension.h  GIF89a.Header.c  GIF89a.Header.h  GIF89a.ImageData.c  GIF89a.ImageData.h  GIF89a.ImageDescriptor.c  GIF89a.ImageDescriptor.h  GIF89a.LogicalScreenDescriptor.c  GIF89a.LogicalScreenDescriptor.h  GIF89a.PlainTextExtension.c  GIF89a.PlainTextExtension.h  GIF89a.Token.h
projects/sandbox/: Color.hpp  Console.cpp  Console.h  Texture.hpp  main.cpp
